--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+    <style>
+img{
+width: 100%;
+    height: 200px;
+}
+</style>
 </head>
 <body>
-<h1>创建一个仓库</h1>
+<div class="container">
+	<div class="row">
+		<div class="text-center">
+			<div class="col-md-3">
+			<img src="img/1.jpg" alt="">
+			<h1><a href="biaodanyanzheng/index.html">表单验证</a></h1>
+			</div>
+			<div class="col-md-3"><h1>表单验证</h1></div>
+			<div class="col-md-3"><h1>表单验证</h1></div>
+			<div class="col-md-3"><h1>表单验证</h1></div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
