--- a/swiper1/index.html
+++ b/swiper1/index.html
@@ -56,7 +56,11 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">
+            <div class="s3">
+                
+            </div>
+        </div>
         <div class="swiper-slide">Slide 4</div>
         <div class="swiper-slide">Slide 5</div>
         <div class="swiper-slide">Slide 6</div>
@@ -67,6 +71,9 @@
 
     <!-- 向右的按钮 -->
     <div class="swiper-button-next"></div>
+    <audio id="mp3" src="mp3/0000011.mp3" autoplay></audio>
+    <span id="mp3Btn"><img src="img/musicIcon.png" alt=""></span>
+
 
 </div>
 
