修改了东西

--- a/swiper1/index.html
+++ b/swiper1/index.html
@@ -58,7 +58,18 @@
         </div>
         <div class="swiper-slide">
             <div class="s3">
-                
+                <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
+                    企业宗旨
+                    <small>COMPANY TENET</small>
+
+                </h2>
+                <p>真诚</p>
+                <p>团结</p>
+                <p>开放</p>
+                <p>主动</p>
+                <p>责任</p>
+                <p>诚信</p>
+                <h3>创新进取</h3>
             </div>
         </div>
         <div class="swiper-slide">Slide 4</div>
