--- a/swiper1/index.html
+++ b/swiper1/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/css/swiper.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/4.0.5/css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css"/>
     <!-- Demo styles -->
     <link rel="stylesheet" href="css/style1.css">
@@ -63,33 +63,104 @@
                     <small>COMPANY TENET</small>
 
                 </h2>
-                <p>真诚</p>
-                <p>团结</p>
-                <p>开放</p>
-                <p>主动</p>
-                <p>责任</p>
-                <p>诚信</p>
-                <h3>创新进取</h3>
+                <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">真诚</p>
+                <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">团结</p>
+                <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">开放</p>
+                <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">主动</p>
+                <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">责任</p>
+                <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">诚信</p>
+                <h3 class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">创新进取</h3>
+                <span></span>
+                <div class="sss">秉着“真诚，团结，主动，责任，创新”的企业文化，立志深耕移动互联网。</div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 4</div>
-        <div class="swiper-slide">Slide 5</div>
-        <div class="swiper-slide">Slide 6</div>
+        <div class="swiper-slide">
+            <div class="s4">
+                <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
+                    发展数据
+                    <small>DEVELOPMENT</small>
+                    </h2>
+                <div>
+                    <img  class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="img/21.png" alt="">
+                    <img src="img/19.png" alt="">
+                    <img src="img/20.png" alt="">
+                    <p>2017年</p>
+                    <p>2016年</p>
+                </div>
+                <div class="one">
+                    <img src="img/17.png" alt="">
+                    <p>销售额增长<small>100%</small></p>
+                    <img src="img/16.png" alt="">
+                    <img src="img/18.png" alt="">
+                    <span>1.2亿</span>
+                    <span>6000万</span>
+                </div>
+                <div class="two">
+                    <img src="img/17.png" alt="">
+                    <p>盈利额增长<small>80%</small></p>
+                    <img src="img/16.png" alt="">
+                    <img src="img/18.png" alt="">
+                    <span>8000万</span>
+                    <span>4800万</span>
+                </div>
+                <div class="three">
+                    <img src="img/17.png" alt="">
+                    <p>用户增长<small>100%</small></p>
+                    <img src="img/16.png" alt="">
+                    <img src="img/18.png" alt="">
+                    <span>100万</span>
+                    <span>50万</span>
+                </div>
+                <div class="wenzi"><p>2017年无论是销售额还是用户数量都有显著增长，2018年再接再厉，再创辉煌！</p></div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s5">
+                <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
+                    年度之星
+                    <small>EXCELLENT STAFF</small>
+                </h2>
+                <img src="img/12.png" alt="">
+                <img src="img/12.png" alt="">
+                <img src="img/12.png" alt="">
+                <img src="img/12.png" alt="">
+                <img src="img/pic1.png" alt="">
+                <img src="img/pic2.png" alt="">
+                <img src="img/pic3.png" alt="">
+                <img src="img/pic4.png" alt="">
+                <p>行政部 - 陈某某</p>
+                <p>运营部 - 蔡某某</p>
+                <p>销售部 - 李某某</p>
+                <p>产品部 - 王某某</p>
+                <span>行政之星</span>
+                <span>运营之星</span>
+                <span>销售之星</span>
+                <span>产品之星</span>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s6">
+                <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
+                    年会流程
+                    <small>PROCESSING</small>
+                </h2>
+            </div>
+        </div>
         <div class="swiper-slide">Slide 7</div>
     </div>
     <!-- 分页器（小圆点） -->
     <div class="swiper-pagination"></div>
 
     <!-- 向右的按钮 -->
-    <div class="swiper-button-next"></div>
-    <audio id="mp3" src="mp3/0000011.mp3" autoplay></audio>
+    <div class="swiper-button-next swiper-button-white"></div>
+    <audio id="mp3" src="mp3/0000011.mp3" autoplay loop></audio>
     <span id="mp3Btn"><img src="img/musicIcon.png" alt=""></span>
 
 
 </div>
 
 <!-- Swiper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
+<script src="https://cdn.bootcss.com/Swiper/4.0.5/js/swiper.min.js"></script>
 <script src="js/swiper.animate1.0.2.min.js"></script>
 <!-- Initialize Swiper -->
 <script src="js/script1.js"></script>
