--- a/swiper1/index.html
+++ b/swiper1/index.html
@@ -46,13 +46,19 @@
                     领导致辞
                     <small>LEADER SPAEECH</small>
                 </h2>
-                <div>
+                <div class="s22">
                     <img class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="img/12.png" alt="">
                     <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s">亲爱的同志们，大家晚上好</p>
                     <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">我们成立于2009年，现在有员工300多人，我们专注于移动互联网与信息互动社区领域，坚持“技术领先、理念领先、管理领先”的发展战略，2015完成公司整体改制，变更为股份有限公司，倾力打造自主知识产权的高端移动分发平台致力于帮助移动互联网用户过移动设备享受更开放，便捷的互联网服务。
                     </p>
                     <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="2s">我们秉着“真诚、团结、主动、责任”的企业文化，立志深圳移动互联网，打造研发和运营一体的产业链，成为移动互联网行业值得用户尊敬和信赖的公司。</p>
                     <span class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3s">某某企业</span>
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="">
+                        <img src="img/11.png" alt="">
+                    </p>
                 </div>
             </div>
         </div>
@@ -70,24 +76,29 @@
                 <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">责任</p>
                 <p class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">诚信</p>
                 <h3 class="ani" swiper-animate-effect="tada" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">创新进取</h3>
-                <span></span>
-                <div class="sss">秉着“真诚，团结，主动，责任，创新”的企业文化，立志深耕移动互联网。</div>
+                <span class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s"></span>
+                <div class="sss ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s">秉着“真诚，团结，主动，责任，创新”的企业文化，立志深耕移动互联网。</div>
+                <div class="footer">
+                        <img src="img/10.png" alt="">
+                        <img src="img/11.png" alt="">
+                </div>
             </div>
         </div>
         <div class="swiper-slide">
             <div class="s4">
+                <div class="header">
                 <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
                     发展数据
                     <small>DEVELOPMENT</small>
                     </h2>
                 <div>
                     <img  class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="img/21.png" alt="">
-                    <img src="img/19.png" alt="">
-                    <img src="img/20.png" alt="">
-                    <p>2017年</p>
-                    <p>2016年</p>
+                    <img  class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s" src="img/19.png" alt="">
+                    <img  class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s" src="img/20.png" alt="">
+                    <p  class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">2017年</p>
+                    <p class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">2016年</p>
                 </div>
-                <div class="one">
+                <div class="one ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="1s">
                     <img src="img/17.png" alt="">
                     <p>销售额增长<small>100%</small></p>
                     <img src="img/16.png" alt="">
@@ -95,7 +106,7 @@
                     <span>1.2亿</span>
                     <span>6000万</span>
                 </div>
-                <div class="two">
+                <div class="two ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">
                     <img src="img/17.png" alt="">
                     <p>盈利额增长<small>80%</small></p>
                     <img src="img/16.png" alt="">
@@ -103,15 +114,20 @@
                     <span>8000万</span>
                     <span>4800万</span>
                 </div>
-                <div class="three">
+                <div class="three ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="2s">
                     <img src="img/17.png" alt="">
                     <p>用户增长<small>100%</small></p>
                     <img src="img/16.png" alt="">
                     <img src="img/18.png" alt="">
                     <span>100万</span>
                     <span>50万</span>
+                    <div class="wenzi ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s" swiper-animate-delay="2.5s"><p>2017年无论是销售额还是用户数量都有显著增长，2018年再接再厉，再创辉煌！</p></div>
                 </div>
-                <div class="wenzi"><p>2017年无论是销售额还是用户数量都有显著增长，2018年再接再厉，再创辉煌！</p></div>
+                </div>
+                <div class="footer">
+                        <img src="img/10.png" alt="">
+                        <img src="img/11.png" alt="">
+                </div>
             </div>
         </div>
         <div class="swiper-slide">
@@ -136,6 +152,12 @@
                 <span>运营之星</span>
                 <span>销售之星</span>
                 <span>产品之星</span>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="">
+                        <img src="img/11.png" alt="">
+                    </p>
+                </div>
             </div>
         </div>
         <div class="swiper-slide">
@@ -144,9 +166,67 @@
                     年会流程
                     <small>PROCESSING</small>
                 </h2>
+                <div class="szz">
+                <img src="img/19.png" alt="">
+                <img src="img/19.png" alt="">
+                <img src="img/19.png" alt="">
+                    <span></span>
+                </div>
+                <div class="ssz">
+                <img src="img/jingdutiao.png" alt="">
+                <img src="img/jingdutiao.png" alt="">
+                <img src="img/jingdutiao.png" alt="">
+                <img src="img/bgpic1.png" alt="">
+                <img src="img/bgpic1.png" alt="">
+                <img src="img/bgpic1.png" alt="">
+                    <h4>8:00 PM - 9:00 PM</h4>
+                    <h4>9:00 PM - 10:00 PM</h4>
+                    <h4>10:00 PM - 11:00 PM</h4>
+                    <p>>>调试设备，年会人员签到入场就餐</p>
+                    <p>>>年会正常儿幕</p>
+                    <p>>>领导致辞，优秀员工表彰</p>
+                    <p>>>观看精彩绝伦的员工自排演出节目</p>
+                    <p>>>激动人心的抽奖环节</p>
+                    <p>>>领导与员工共进晚餐</p>
+                    <p>>>参与有趣的互动游戏，赢取大奖</p>
+                    <p>>>各部门员工大合影</p>
+                    <p>>>晚会结束，大家有序离场</p>
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="">
+                        <img src="img/11.png" alt="">
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 7</div>
+        <div class="swiper-slide">
+            <div class="s7">
+                <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
+                    诚挚邀请
+                    <small>INVJTATION</small>
+                </h2>
+                <div>
+                <img src="img/12.png" alt=""></div>
+                <input type="text" placeholder="姓名">
+                <input type="text" placeholder="电话">
+                <input type="text" placeholder="部门">
+                <button>提交</button>
+                <p>*</p>
+                <p>*</p>
+                <p>*</p>
+
+                <div class="wen"><h5>2018年1月18日 晚8:00-11:00</h5>
+                <h5>XX市XX路XXX大酒店大堂</h5>
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="">
+                        <img src="img/11.png" alt="">
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- 分页器（小圆点） -->
     <div class="swiper-pagination"></div>
@@ -155,7 +235,6 @@
     <div class="swiper-button-next swiper-button-white"></div>
     <audio id="mp3" src="mp3/0000011.mp3" autoplay loop></audio>
     <span id="mp3Btn"><img src="img/musicIcon.png" alt=""></span>
-
 
 </div>
 
