--- a/swiper1/index.html
+++ b/swiper1/index.html
@@ -86,12 +86,11 @@
         </div>
         <div class="swiper-slide">
             <div class="s4">
-                <div class="header">
                 <h2 class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">
                     发展数据
                     <small>DEVELOPMENT</small>
                     </h2>
-                <div>
+                <div class="ooo">
                     <img  class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="img/21.png" alt="">
                     <img  class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s" src="img/19.png" alt="">
                     <img  class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s" src="img/20.png" alt="">
@@ -123,11 +122,10 @@
                     <span>50万</span>
                     <div class="wenzi ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s" swiper-animate-delay="2.5s"><p>2017年无论是销售额还是用户数量都有显著增长，2018年再接再厉，再创辉煌！</p></div>
                 </div>
-                </div>
-                <div class="footer">
+                <p class="footer">
                         <img src="img/10.png" alt="">
                         <img src="img/11.png" alt="">
-                </div>
+                </p>
             </div>
         </div>
         <div class="swiper-slide">
@@ -136,22 +134,24 @@
                     年度之星
                     <small>EXCELLENT STAFF</small>
                 </h2>
-                <img src="img/12.png" alt="">
-                <img src="img/12.png" alt="">
-                <img src="img/12.png" alt="">
-                <img src="img/12.png" alt="">
-                <img src="img/pic1.png" alt="">
-                <img src="img/pic2.png" alt="">
-                <img src="img/pic3.png" alt="">
-                <img src="img/pic4.png" alt="">
-                <p>行政部 - 陈某某</p>
-                <p>运营部 - 蔡某某</p>
-                <p>销售部 - 李某某</p>
-                <p>产品部 - 王某某</p>
-                <span>行政之星</span>
-                <span>运营之星</span>
-                <span>销售之星</span>
-                <span>产品之星</span>
+                <div class="mmm">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s"  src="img/12.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/12.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/12.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/12.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/pic1.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/pic2.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/pic3.png" alt="">
+                <img class="ani"swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/pic4.png" alt="">
+                <p class="ani"swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2s">行政部 - 陈某某</p>
+                <p class="ani"swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2s">运营部 - 蔡某某</p>
+                <p class="ani"swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2s">销售部 - 李某某</p>
+                <p class="ani"swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2s">产品部 - 王某某</p>
+                <span class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3s">行政之星</span>
+                <span class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3s">运营之星</span>
+                <span class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3s">销售之星</span>
+                <span class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3s">产品之星</span>
+                </div>
                 <div class="footer">
                     <p>
                         <img src="img/10.png" alt="">
@@ -173,24 +173,24 @@
                     <span></span>
                 </div>
                 <div class="ssz">
-                <img src="img/jingdutiao.png" alt="">
-                <img src="img/jingdutiao.png" alt="">
-                <img src="img/jingdutiao.png" alt="">
-                <img src="img/bgpic1.png" alt="">
-                <img src="img/bgpic1.png" alt="">
-                <img src="img/bgpic1.png" alt="">
-                    <h4>8:00 PM - 9:00 PM</h4>
-                    <h4>9:00 PM - 10:00 PM</h4>
-                    <h4>10:00 PM - 11:00 PM</h4>
-                    <p>>>调试设备，年会人员签到入场就餐</p>
-                    <p>>>年会正常儿幕</p>
-                    <p>>>领导致辞，优秀员工表彰</p>
-                    <p>>>观看精彩绝伦的员工自排演出节目</p>
-                    <p>>>激动人心的抽奖环节</p>
-                    <p>>>领导与员工共进晚餐</p>
-                    <p>>>参与有趣的互动游戏，赢取大奖</p>
-                    <p>>>各部门员工大合影</p>
-                    <p>>>晚会结束，大家有序离场</p>
+                <img class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s" src="img/jingdutiao.png" alt="">
+                <img class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s" src="img/jingdutiao.png" alt="">
+                <img class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s" src="img/jingdutiao.png" alt="">
+                <img class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s" src="img/bgpic1.png" alt="">
+                <img class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s" src="img/bgpic1.png" alt="">
+                <img class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s" src="img/bgpic1.png" alt="">
+                    <h4 class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">8:00 PM - 9:00 PM</h4>
+                    <h4 class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">9:00 PM - 10:00 PM</h4>
+                    <h4 class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">10:00 PM - 11:00 PM</h4>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>调试设备，年会人员签到入场就餐</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>年会正常儿幕</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>领导致辞，优秀员工表彰</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>观看精彩绝伦的员工自排演出节目</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>激动人心的抽奖环节</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>领导与员工共进晚餐</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>参与有趣的互动游戏，赢取大奖</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>各部门员工大合影</p>
+                    <p class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">>>晚会结束，大家有序离场</p>
                 </div>
                 <div class="footer">
                     <p>
@@ -206,16 +206,17 @@
                     诚挚邀请
                     <small>INVJTATION</small>
                 </h2>
-                <div>
+                <div class="zml">
                 <img src="img/12.png" alt=""></div>
                 <input type="text" placeholder="姓名">
                 <input type="text" placeholder="电话">
                 <input type="text" placeholder="部门">
                 <button>提交</button>
+                <div class="nnn">
                 <p>*</p>
                 <p>*</p>
                 <p>*</p>
-
+            </div>
                 <div class="wen"><h5>2018年1月18日 晚8:00-11:00</h5>
                 <h5>XX市XX路XXX大酒店大堂</h5>
                 </div>
