--- a/双选会/index.html
+++ b/双选会/index.html
@@ -43,7 +43,23 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">
+            <div class="s2">
+                <img class="ani" swiper-animate-effect=" fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="0.3s" src="img/tupian1.png" alt="">
+                <img class="ani" swiper-animate-effect=" zoomIn" swiper-animate-duration="4s" swiper-animate-delay="0.3s" src="img/tupian2.png" alt="">
+                <img class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="4s" swiper-animate-delay="0.3s" src="img/tupian3.png" alt="">
+                <div class="wenzi">
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.5s">活</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.7s">动</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.9s">目</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.1s">的</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.3s">及</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.5s">意</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.7s">义</p>
+                </div>
+                <p class="wen ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.5s">积极地引导大学生树立健康向上的就业观念，进一步解放思想，提高自身素质，找到属于自己的工作.，由于学生可塑性强，选择余地大，候选人员多样化，可满足企业多方面的需求，招募成本低，有助于在青年一代中树立自己的品牌，培养一批新的服务对象等。</p>
+            </div>
+        </div>
         <div class="swiper-slide">Slide 3</div>
         <div class="swiper-slide">Slide 4</div>
         <div class="swiper-slide">Slide 5</div>
@@ -53,7 +69,7 @@
         <div class="swiper-slide">Slide 9</div>
         <div class="swiper-slide">Slide 10</div>
     </div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
 </div>
 <script src="https://cdn.bootcss.com/Swiper/4.0.5/js/swiper.min.js"></script>
 <script src="js/swiper.animate1.0.2.min.js"></script>
