--- a/双选会/index.html
+++ b/双选会/index.html
@@ -45,31 +45,70 @@
         </div>
         <div class="swiper-slide">
             <div class="s2">
-                <img class="ani" swiper-animate-effect=" fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="0.3s" src="img/tupian1.png" alt="">
-                <img class="ani" swiper-animate-effect=" zoomIn" swiper-animate-duration="4s" swiper-animate-delay="0.3s" src="img/tupian2.png" alt="">
-                <img class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="4s" swiper-animate-delay="0.3s" src="img/tupian3.png" alt="">
+                <img class="ani" swiper-animate-effect=" fadeInDownBig" swiper-animate-duration="2s" swiper-animate-delay="0.3s" src="img/tupian1.png" alt="">
+                <img class="ani" swiper-animate-effect=" zoomIn" swiper-animate-duration="3s" swiper-animate-delay="0.3s" src="img/tupian2.png" alt="">
+                <img class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="3s" swiper-animate-delay="0.3s" src="img/tupian3.png" alt="">
                 <div class="wenzi">
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.5s">活</p>
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.7s">动</p>
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.9s">目</p>
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.1s">的</p>
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.3s">及</p>
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.5s">意</p>
-                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2.7s">义</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="1.5s">活</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="1.7s">动</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="1.9s">目</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="2.1s">的</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="2.3s">及</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="2.5s">意</p>
+                <p  class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="2.7s">义</p>
                 </div>
-                <p class="wen ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="1.5s">积极地引导大学生树立健康向上的就业观念，进一步解放思想，提高自身素质，找到属于自己的工作.，由于学生可塑性强，选择余地大，候选人员多样化，可满足企业多方面的需求，招募成本低，有助于在青年一代中树立自己的品牌，培养一批新的服务对象等。</p>
+                <p class="wen ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5s" swiper-animate-delay="1.5s">积极地引导大学生树立健康向上的就业观念，进一步解放思想，提高自身素质，找到属于自己的工作.，由于学生可塑性强，选择余地大，候选人员多样化，可满足企业多方面的需求，招募成本低，有助于在青年一代中树立自己的品牌，培养一批新的服务对象等。</p>
             </div>
         </div>
-        <div class="swiper-slide">Slide 3</div>
-        <div class="swiper-slide">Slide 4</div>
-        <div class="swiper-slide">Slide 5</div>
-        <div class="swiper-slide">Slide 6</div>
-        <div class="swiper-slide">Slide 7</div>
-        <div class="swiper-slide">Slide 8</div>
-        <div class="swiper-slide">Slide 9</div>
-        <div class="swiper-slide">Slide 10</div>
+        <div class="swiper-slide">
+            <div class="s3">
+                <img  class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1s" src="img/shan.png" alt="">
+                <img  class="ani" swiper-animate-effect="slideInLeft" swiper-animate-duration="1s" swiper-animate-delay="3s" src="img/botou.png" alt="">
+                <h1   class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2s" >学校简介</h1>
+                <p class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="2s">泊头职业学院是经河北省人民政府批准，教育部备案同意，由沧州师范泊头分校改建的国办全日制普通高校。学院坐落于素有“中国铸造名城”之称的河北省新兴城市——泊头市，交通便利，地理位置优越。建校九十年来，为河北乃至全国培养了大批优秀人才。</p>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s4">
+                <div class="wenzi1">
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="1s">活</p>
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="1.3s">动</p>
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="1.6s">安</p>
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="1.9s">排</p>
+                </div>
+                <img class="tupian" src="img/chuan.png" alt="">
+                <div class="header">
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="2.1s">8:00-9:00</p>
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="3.2s">9:00-10:00</p>
+                <p   class="ani" swiper-animate-effect="fadeInRightBig" swiper-animate-duration="1s" swiper-animate-delay="4.2s">10:00-11:30</p>
+                <img   class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="2.5s" src="img/zhitou.jpg" alt="">
+                <img   class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="3.6s" src="img/zhitou.jpg" alt="">
+                <img   class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="4.6s" src="img/zhitou.jpg" alt="">
+                <p   class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="2.9s">学生会人员张贴海报丶挂横幅丶搬桌子</p>
+                <p   class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="4s">双选会负责人按时间分配到会场负责报道登记工作</p>
+                <p   class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="5s">进行面试</p>
+                <p class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1s" swiper-animate-delay="6s">地点：泊头职业学院</p>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s5">
+                <h3  class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">联系方式</h3>
+                <input type="text" placeholder="姓名">
+                <input type="text" placeholder="电话">
+                <input type="text" placeholder="邮箱">
+                <button>提交</button>
+                <div class="nnn">
+                    <p>*</p>
+                    <p>*</p>
+                    <p>*</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="swiper-button-next swiper-button-white"></div>
+    <audio id="mp3" src="mp3/asdwa.mp3" autoplay loop></audio>
+    <span id="mp3Btn"><img src="img/musicIcon.png" alt=""></span>
 </div>
 <script src="https://cdn.bootcss.com/Swiper/4.0.5/js/swiper.min.js"></script>
 <script src="js/swiper.animate1.0.2.min.js"></script>
