--- a/index.html
+++ b/index.html
@@ -45,19 +45,12 @@
 					<div class="thumbnail">
 						<img src="img/1.jpg" alt="...">
 						<div class="caption">
-							<h3>Thumbnail label</h3>
-							<p>...</p>
-							<p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+							<h3>Vue</h3>
+							<p><a href="#" class="btn btn-primary" role="button">Vue</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
-<<<<<<< HEAD
-=======
-			<div class="col-md-3"><h1><a href="双选会/index.html">双选会</a></h1></div>
-			<div class="col-md-3"><h1><a href="swiper1/index.html">微场景项目</a></h1></div>
-			<div class="col-md-3"><h1>表单验证</h1></div>
->>>>>>> origin/master
 		</div>
 			</div>
 </div>
