--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<img src="img/1.jpg" alt="...">
 					<div class="caption">
 						<h3>双选会</h3>
-						<p><a href="双选会/index.html" class="btn btn-primary" role="button">微场景</a></p>
+						<p><a href="双选会/index.html" class="btn btn-primary" role="button">双选会</a></p>
 					</div>
 				</div>
 			</div>
