--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
 					<div class="thumbnail">
 						<img src="img/1.jpg" alt="...">
 						<div class="caption">
+							<h3>oppo</h3>
+							<p><a href="oppo/index.html" class="btn btn-primary" role="button">双选会</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<div class="thumbnail">
+						<img src="img/1.jpg" alt="...">
+						<div class="caption">
 							<h3>表单验证</h3>
 							<p><a href="biaodanyanzheng/index.html" class="btn btn-primary" role="button">表单验证</a></p>
 						</div>
