--- a/oppo/list.html
+++ b/oppo/list.html
@@ -81,7 +81,7 @@
                 <p>R11s</p>
                 <p>全面屏拍照手机</p>
                 <img class="ani" swiper-animate-effect="fleft" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/xiangmu23.png" alt="">
-                <img class="ani" swiper-animate-effect="fright" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/.xiangmu24png.png" alt="">
+                <img class="ani" swiper-animate-effect="fright" swiper-animate-duration="0.5s" swiper-animate-delay="1s" src="img/xiangmu27.png" alt="">
             </div>
         </div>
         <div class="swiper-slide">
