--- a/oppo/index.html
+++ b/oppo/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=EDGE" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <title>【OPPO智能手机官网】OPPO R11s 全面屏拍照手机_前后2000万，拍照更清晰 </title>
+    <meta name="keywords" content="OPPO手机,OPPO智能手机大全,OPPO智能手机最新报价,OPPO智能手机图片,OPPO智能手机机型,OPPOR11s,OPPO全面屏手机 " />
+    <meta name="description" content="OPPO 更多年轻人选择的拍照手机。国产手机越来越受青睐，在中国，更多年轻人选择OPPO全面屏拍照手机。十年来，OPPO一直专注手机拍照的技术创新，如今，全球超过2亿年轻人正在使用OPPO拍照手机。据权威数据机构IDC统计，OPPO 2016年已成为中国手机市场出货量第一品牌。 " />
+    <meta property="qc:admins" content="1257363774670076375" />
+    <meta name="baidu-site-verification" content="e2wIIvjSch" />
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/4.0.5/css/swiper.min.css">
-
+    <link rel="shortcut icon" href="img/bitbug_favicon.ico" />
     <!-- Demo styles -->
 
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -132,10 +136,12 @@
                 © 2005 - 2017 OPPO 版权所有 粤ICP备08130115号-1 联系方式：4001-666-888
             </div>
             <div class="col-xs-12">
-                关注我们: <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                关注我们: <img src="img/logo1.png" alt="">
+                <img src="img/logo2.png" alt="">
+                <img src="img/logo3.png" alt="">
+                <img src="img/logo4.png" alt="">
+                <img src="img/logo5.png" alt="">
+                <img src="img/logo6.png" alt="">
             </div>
         </div>
     </div>
