--- a/oppo/list.html
+++ b/oppo/list.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=EDGE" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <title>『OPPO官网商城』OPPO最新款智能手机在线购买_OPPO最新款智能手机快捷支付-OPPO智能手机官网 </title>
+    <meta name="keywords" content="OPPO最新款智能手机在线订购,OPPO最新款智能手机在线购买,OPPO最新款智能手机快捷支付 " />
+    <meta name="description" content="OPPO官网商城首页为您提供OPPO最新款智能手机在线订购,OPPO最新款智能手机在线购买,OPPO最新款智能手机快捷支付等信息,多种OPPO智能手机任您选择与订购,智能手机网上购买尽在OPPO官网。 " />
+    <meta property="qc:admins" content="1257363774670076375" />
+    <meta name="baidu-site-verification" content="e2wIIvjSch" />
 <!-- Link Swiper's CSS -->
 <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/4.0.5/css/swiper.min.css">
-
+    <link rel="shortcut icon" href="img/bitbug_favicon.ico" />
 <!-- Demo styles -->
 
 <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">oppo</a>
+            <a class="navbar-brand" href="index.html">oppo</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -191,7 +196,12 @@
                 © 2005 - 2017 OPPO 版权所有 粤ICP备08130115号-1 联系方式：4001-666-888
             </div>
             <div class="col-xs-12">
-                关注我们: <img src="img/asd.png" alt="">
+                关注我们: <img src="img/logo1.png" alt="">
+                <img src="img/logo2.png" alt="">
+                <img src="img/logo3.png" alt="">
+                <img src="img/logo4.png" alt="">
+                <img src="img/logo5.png" alt="">
+                <img src="img/logo6.png" alt="">
             </div>
         </div>
     </div>
