--- a/oppo/xiangqing.html
+++ b/oppo/xiangqing.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=EDGE" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <title>【OPPO R11s】立即购买-OPPO智能手机官网 </title>
+    <meta name="keywords" content="OPPO R11s,OPPO R11s智能手机,OPPO   R11s最新价格,OPPO R11s配置参数,OPPO R11s图片,OPPO R11s评测 " />
+    <meta name="description" content="OPPO智能手机官网为您提供OPPO R11s 全面屏拍照手机，最新动态、报价、配置参数，以及OPPO R11s真机高清图片，了解详情请点击OPPO智能手机官网。 " />
+    <meta property="qc:admins" content="1257363774670076375" />
+    <meta name="baidu-site-verification" content="e2wIIvjSch" />
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/4.0.5/css/swiper.min.css">
-
+    <link rel="shortcut icon" href="img/bitbug_favicon.ico" />
     <!-- Demo styles -->
 
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">oppo</a>
+            <a class="navbar-brand" href="index.html">oppo</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -173,7 +178,17 @@
                 </div>
             </div>
             <div class="col-xs-12 m7">
-
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
+                <div class="col-xs-12"></div>
             </div>
         </div>
     </div>
@@ -181,30 +196,34 @@
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6">
-                <p>24小时全国热线</p>
-                <h2>4001-666-888</h2>
-            </div>
-            <div class="col-xs-6">
-                <img src="img/111.png" alt="">
-            </div>
-            <div class="xian"></div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
             <div class="col-xs-12">
-                © 2005 - 2017 OPPO 版权所有 粤ICP备08130115号-1 联系方式：4001-666-888
+                <div class="col-xs-6 "><p>用户评价（1986）</p></div>
+                <div class="col-xs-6"><p>查看全部评价</p></div>
             </div>
             <div class="col-xs-12">
-                关注我们: <img src="img/asd.png" alt="">
+                <div class="col-xs-6">
+                    <img src="img/pd-avatar-x2.png" alt="">
+                    <p>初见如花开</p>
+                </div>
+                <div class="col-xs-6"><img src="img/xingxing.png" alt=""></div>
+            </div>
+            <div class="col-xs-12">
+                <div class="col-xs-4"><img src="img/111.jpeg" alt=""></div>
+                <div class="col-xs-8"><p>手机质量很好，颜色很靓，很喜欢，拍照很清晰，大爱
+                还有杰伦的手机壳 拿回来就用还是拿了 超喜欢 手机很好用 手机上还有小狗logo
+                很漂亮 指纹和面部解锁很灵敏 喜欢的美眉可以下手了 绝对不会失望的</p></div>
             </div>
         </div>
     </div>
+    <div class="kongbai"></div>
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-
+        <div class="row">
+            <div class="col-xs-2"><img src="img/122.png" alt=""></div>
+            <div class="col-xs-5"><a href=""><p>加入购物车</p></a></div>
+            <div class="col-xs-5"><a href=""><p>立即购买</p></a></div>
+        </div>
     </div>
 </nav>
 <script src="https://cdn.bootcss.com/Swiper/4.0.5/js/swiper.min.js"></script>
