--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-sm-6 col-md-3">
+					<div class="thumbnail">
+						<img src="img/1.jpg" alt="...">
+						<div class="caption">
+							<h3>个人博客</h3>
+							<p><a href="#" class="btn btn-primary" role="button">个人博客</a></p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 			</div>
