--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<img src="img/1.jpg" alt="...">
 						<div class="caption">
 							<h3>个人博客</h3>
-							<p><a href="#" class="btn btn-primary" role="button">个人博客</a></p>
+							<p><a href="个人博客/index.html" class="btn btn-primary" role="button">个人博客</a></p>
 						</div>
 					</div>
 				</div>
