--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-sm-6 col-md-3">
+					<div class="thumbnail">
+						<img src="img/1.jpg" alt="...">
+						<div class="caption">
+							<h3>华为</h3>
+							<p><a href="华为/index.html" class="btn btn-primary" role="button">华为</a></p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 			</div>
