--- a/个人博客/index.html
+++ b/个人博客/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="feng">
             <div class="bu">
-                <div class="swiper-container">
+                <div class="swiper-container wow fadeInUp" data-wow-delay="2s"  >
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" style="background-image:url(images/fengjing1.jpg)"></div>
                         <div class="swiper-slide" style="background-image:url(images/fengjing2.jpg)"></div>
@@ -37,9 +37,9 @@
                     <div class="swiper-pagination"></div>
                 </div>
                 <div class="neirong">
-                    <img class="img1" src="images/fengjing6.jpg" alt="">
-                    <p class="wow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;马尔代夫这是没有都市、没有马路、没有高楼的小岛。晴空万里的蓝天，皎洁细柔的沙滩上，海风徐徐轻拂，青葱翠绿椰林处处随风摇曳，清澈碧澄的海风因风吹过而迭起了层层纹线。远处，水天交接，偶而或有一小黑点由远而近匍匍前行，那是岛民驾着舵尼斯横越而过。</p>
-                    <img class="img2"  src="images/fengjing8.jpg" alt="">
+                    <img class="img1 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.5s" src="images/fengjing6.jpg" alt="">
+                    <p class="wow fadeInUp" data-wow-delay="0.5s" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;马尔代夫这是没有都市、没有马路、没有高楼的小岛。晴空万里的蓝天，皎洁细柔的沙滩上，海风徐徐轻拂，青葱翠绿椰林处处随风摇曳，清澈碧澄的海风因风吹过而迭起了层层纹线。远处，水天交接，偶而或有一小黑点由远而近匍匍前行，那是岛民驾着舵尼斯横越而过。</p>
+                    <img class="img2 wow fadeInUp" data-wow-delay="0.5s"  src="images/fengjing8.jpg" alt="">
                     <p class="wow fadeInUp" data-wow-delay="0.5s"  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;马尔代夫在夜色降临后，黑暗将马尔代夫笼罩，喧闹慢慢散去。海上一片漆黑，嵌在沙地里的灯，散发出微弱的光！夜晚的马尔代夫没有一般城市的灯火璀璨，没有变幻万端的耀眼霓虹，酒店、家庭里的灯光，将马尔代夫点亮！此时的马尔代夫，让人感到温馨！远处漆黑的大海海上，近处柔和的灯光，一片和谐，世外桃园不过如此！马尔代夫的夜晚，宁静而不是繁华!</p>
                 </div>
             </div>
